--- a/composer.json
+++ b/composer.json
@@ -29,5 +29,9 @@
         "branch-alias": {
             "dev-master": "1.0.x-dev"
         }
+    },
+    "require": {
+        "anomaly/streams-platform": "^1.3.0",
+        "anomaly/forms-module": "^1.3.0"
     }
 }
